dump screnshots for mony

--- a/mony.html
+++ b/mony.html
@@ -41,12 +41,6 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-
-
-
-
-
-
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -87,11 +81,6 @@
 
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
-
-
-
-
-
 </script>
 
 <script type="text/javascript">
@@ -104,11 +93,6 @@
                     initTopMenuActions("body_panel");
                 });
             });
-
-
-
-
-
 </script>
 
 <div id="menu"></div>
@@ -173,10 +157,216 @@
         <div class="gallery">
             <a data-fancybox="wip"
                data-caption="Case studies for this project are being worked on"
-               href="img/wip.png">
-                <img class="gallery1" src="img/wip.png"/>
+               href="img/wip2.png">
+                <img class="gallery1" src="img/wip2.png"/>
             </a>
         </div>
+
+        <div class="subtitle">Low Fidelity Mockups</div>
+
+        <div class="subtitle2">Basic Flow</div>
+
+        <div class="gallery">
+            <a data-fancybox="showcase"
+               href="img/mony/app 1.png">
+                <img class="gallery3 left_image" src="img/mony/app 1.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/app 2.png">
+                <img class="gallery3 center_image" src="img/mony/app 2.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/app 3.png">
+                <img class="gallery3 right_image" src="img/mony/app 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase"
+               href="img/mony/app 4.png">
+                <img class="gallery3 left_image" src="img/mony/app 4.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/app 5.png">
+                <img class="gallery3 center_image" src="img/mony/app 5.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/app 6.png">
+                <img class="gallery3 right_image" src="img/mony/app 6.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle2">New Transactions</div>
+
+        <div class="gallery">
+            <a data-fancybox="showcase"
+               href="img/mony/new transactions 1.png">
+                <img class="gallery3 left_image" src="img/mony/new transactions 1.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/new transactions 2.png">
+                <img class="gallery3 center_image" src="img/mony/new transactions 2.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/new transactions 3.png">
+                <img class="gallery3 right_image" src="img/mony/new transactions 3.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle2">Manual Entries</div>
+
+        <div class="gallery">
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 1.png">
+                <img class="gallery3 left_image" src="img/mony/manual add 1.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 2.png">
+                <img class="gallery3 center_image" src="img/mony/manual add 2.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 3.png">
+                <img class="gallery3 right_image" src="img/mony/manual add 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 4.png">
+                <img class="gallery3 left_image" src="img/mony/manual add 4.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 5.png">
+                <img class="gallery3 center_image" src="img/mony/manual add 5.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 6.png">
+                <img class="gallery3 right_image" src="img/mony/manual add 6.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase"
+               href="img/mony/manual add 7.png">
+                <img class="gallery3 left_image" src="img/mony/manual add 7.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle2">End of Month Stats</div>
+
+        <div class="gallery">
+            <a data-fancybox="showcase"
+               href="img/mony/end of month 1.png">
+                <img class="gallery3 left_image" src="img/mony/end of month 1.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/end of month 2.png">
+                <img class="gallery3 center_image" src="img/mony/end of month 2.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/end of month 3.png">
+                <img class="gallery3 right_image" src="img/mony/end of month 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase"
+               href="img/mony/end of month 4.png">
+                <img class="gallery3 left_image" src="img/mony/end of month 4.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/end of month 5.png">
+                <img class="gallery3 center_image" src="img/mony/end of month 5.png"/>
+            </a>
+            <a data-fancybox="showcase"
+               href="img/mony/end of month 6.png">
+                <img class="gallery3 right_image" src="img/mony/end of month 6.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle">High Fidelity Mockups</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/Ask for SMS read permission.png">
+                <img class="gallery3 left_image with_border" src="img/mony/Ask for SMS read permission.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/home expanded.png">
+                <img class="gallery3 center_image with_border" src="img/mony/home expanded.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/home collapsed.png">
+                <img class="gallery3 right_image with_border" src="img/mony/home collapsed.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/category details.png">
+                <img class="gallery3 left_image with_border" src="img/mony/category details.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/new transactions.png">
+                <img class="gallery3 center_image with_border" src="img/mony/new transactions.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/trends promo.png">
+                <img class="gallery3 right_image with_border" src="img/mony/trends promo.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/trends.png">
+                <img class="gallery3 left_image with_border" src="img/mony/trends.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/manual add visd 1.png">
+                <img class="gallery3 center_image with_border" src="img/mony/manual add visd 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/manual add visd 2.png">
+                <img class="gallery3 right_image with_border" src="img/mony/manual add visd 2.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/manual add visd 3.png">
+                <img class="gallery3 left_image with_border" src="img/mony/manual add visd 3.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/manual add visd 4.png">
+                <img class="gallery3 center_image with_border" src="img/mony/manual add visd 4.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/manual add visd 5.png">
+                <img class="gallery3 right_image with_border" src="img/mony/manual add visd 5.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/comp 1.png">
+                <img class="gallery3 left_image with_border" src="img/mony/comp 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/comp 2.png">
+                <img class="gallery3 center_image with_border" src="img/mony/comp 2.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/mony/comp 3.png">
+                <img class="gallery3 right_image with_border" src="img/mony/comp 3.png"/>
+            </a>
+
+        </div>
+
 
         <div id="disqus_thread"></div>
         <script>
