dump screnshots for picto - too many wireframes

--- a/picto.html
+++ b/picto.html
@@ -166,8 +166,214 @@
         <div class="gallery">
             <a data-fancybox="wip"
                data-caption="Case studies for this project are being worked on"
-               href="img/wip.png">
-                <img class="gallery1" src="img/wip.png"/>
+               href="img/wip2.png">
+                <img class="gallery1" src="img/wip2.png"/>
+            </a>
+        </div>
+
+        <div class="subtitle">Low Fidelity Mockups</div>
+        <div class="subtitle2">The Piclover Experience</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 1.png">
+                <img class="gallery3 left_image with_border" src="img/picto/piclover 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 3.png">
+                <img class="gallery3 center_image with_border" src="img/picto/piclover 3.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 4.png">
+                <img class="gallery3 right_image with_border" src="img/picto/piclover 4.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 5.png">
+                <img class="gallery3 left_image with_border" src="img/picto/piclover 5.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 6.png">
+                <img class="gallery3 center_image with_border" src="img/picto/piclover 6.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 7.png">
+                <img class="gallery3 right_image with_border" src="img/picto/piclover 7.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 8.png">
+                <img class="gallery3 left_image with_border" src="img/picto/piclover 8.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 9.png">
+                <img class="gallery3 center_image with_border" src="img/picto/piclover 9.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 10.png">
+                <img class="gallery3 right_image with_border" src="img/picto/piclover 10.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 11.png">
+                <img class="gallery3 left_image with_border" src="img/picto/piclover 11.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/piclover 12.png">
+                <img class="gallery3 center_image with_border" src="img/picto/piclover 12.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle2">The Pictaker Experience</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 1.png">
+                <img class="gallery3 left_image with_border" src="img/picto/pictaker 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 2.png">
+                <img class="gallery3 center_image with_border" src="img/picto/pictaker 2.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 3.png">
+                <img class="gallery3 right_image with_border" src="img/picto/pictaker 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 4.png">
+                <img class="gallery3 left_image with_border" src="img/picto/pictaker 4.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 5.png">
+                <img class="gallery3 center_image with_border" src="img/picto/pictaker 5.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 6.png">
+                <img class="gallery3 right_image with_border" src="img/picto/pictaker 6.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 7.png">
+                <img class="gallery3 left_image with_border" src="img/picto/pictaker 7.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 8.png">
+                <img class="gallery3 center_image with_border" src="img/picto/pictaker 8.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/pictaker 9.png">
+                <img class="gallery3 right_image with_border" src="img/picto/pictaker 9.png"/>
+            </a>
+        </div>
+
+        <div class="subtitle">High Fidelity Mockups</div>
+        <div class="subtitle2">The Piclover Experience</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Onboarding 1 - medium.jpg">
+                <img class="gallery3 left_image with_border" src="img/picto/Onboarding 1 - medium.jpg"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Onboarding 2 - medium.jpg">
+                <img class="gallery3 center_image with_border" src="img/picto/Onboarding 2 - medium.jpg"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Onboarding 3 - medium.jpg">
+                <img class="gallery3 right_image with_border" src="img/picto/Onboarding 3 - medium.jpg"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Home screen - medium.png">
+                <img class="gallery3 left_image with_border" src="img/picto/Home screen - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Profile pictaker - medium.jpg">
+                <img class="gallery3 center_image with_border" src="img/picto/Profile pictaker - medium.jpg"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Price offer.png">
+                <img class="gallery3 right_image with_border" src="img/picto/Price offer.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Create account - medium.png">
+                <img class="gallery3 left_image with_border" src="img/picto/Create account - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - extra info - medium.png">
+                <img class="gallery3 center_image with_border" src="img/picto/Session - extra info - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - medium.jpg">
+                <img class="gallery3 right_image with_border" src="img/picto/Session - medium.jpg"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - pics uploaded - medium.png">
+                <img class="gallery3 left_image with_border" src="img/picto/Session - pics uploaded - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - preview - medium.png">
+                <img class="gallery3 center_image with_border" src="img/picto/Session - preview - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - download - medium.png">
+                <img class="gallery3 right_image with_border" src="img/picto/Session - download - medium.png"/>
+            </a>
+        </div>
+
+        <div class="subtitle2">The Pictaker Experience</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Home screen - pictaker - medium.png">
+                <img class="gallery3 left_image with_border" src="img/picto/Home screen - pictaker - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - picktaker - accepted - medium.png">
+                <img class="gallery3 center_image with_border" src="img/picto/Session - picktaker - accepted - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - pictaker - arrived - medium.png">
+                <img class="gallery3 right_image with_border" src="img/picto/Session - pictaker - arrived - medium.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - pictaker - ended - medium.png">
+                <img class="gallery3 left_image with_border" src="img/picto/Session - pictaker - ended - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - pictaker - picker - medium.png">
+                <img class="gallery3 center_image with_border" src="img/picto/Session - pictaker - picker - medium.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/picto/Session - pictaker - uploading - medium.png">
+                <img class="gallery3 right_image with_border" src="img/picto/Session - pictaker - uploading - medium.png"/>
             </a>
         </div>
 
