dump screnshots for picto

--- a/picto.html
+++ b/picto.html
@@ -172,7 +172,7 @@
         </div>
 
         <div class="subtitle">Low Fidelity Mockups</div>
-        <div class="subtitle2">The Piclover Experience</div>
+        <div class="subtitle2">Piclover Screens</div>
 
         <div class="gallery">
 
@@ -195,36 +195,7 @@
                href="img/picto/piclover 5.png">
                 <img class="gallery3 left_image with_border" src="img/picto/piclover 5.png"/>
             </a>
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/piclover 6.png">
-                <img class="gallery3 center_image with_border" src="img/picto/piclover 6.png"/>
-            </a>
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/piclover 7.png">
-                <img class="gallery3 right_image with_border" src="img/picto/piclover 7.png"/>
-            </a>
 
-            <p class="gallery_separator"></p>
-
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/piclover 8.png">
-                <img class="gallery3 left_image with_border" src="img/picto/piclover 8.png"/>
-            </a>
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/piclover 9.png">
-                <img class="gallery3 center_image with_border" src="img/picto/piclover 9.png"/>
-            </a>
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/piclover 10.png">
-                <img class="gallery3 right_image with_border" src="img/picto/piclover 10.png"/>
-            </a>
-
-            <p class="gallery_separator"></p>
-
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/piclover 11.png">
-                <img class="gallery3 left_image with_border" src="img/picto/piclover 11.png"/>
-            </a>
             <a data-fancybox="showcase" class="needsBorder"
                href="img/picto/piclover 12.png">
                 <img class="gallery3 center_image with_border" src="img/picto/piclover 12.png"/>
@@ -232,7 +203,7 @@
 
         </div>
 
-        <div class="subtitle2">The Pictaker Experience</div>
+        <div class="subtitle2">Pictaker Screens</div>
 
         <div class="gallery">
 
@@ -254,21 +225,6 @@
             <a data-fancybox="showcase" class="needsBorder"
                href="img/picto/pictaker 4.png">
                 <img class="gallery3 left_image with_border" src="img/picto/pictaker 4.png"/>
-            </a>
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/pictaker 5.png">
-                <img class="gallery3 center_image with_border" src="img/picto/pictaker 5.png"/>
-            </a>
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/pictaker 6.png">
-                <img class="gallery3 right_image with_border" src="img/picto/pictaker 6.png"/>
-            </a>
-
-            <p class="gallery_separator"></p>
-
-            <a data-fancybox="showcase" class="needsBorder"
-               href="img/picto/pictaker 7.png">
-                <img class="gallery3 left_image with_border" src="img/picto/pictaker 7.png"/>
             </a>
             <a data-fancybox="showcase" class="needsBorder"
                href="img/picto/pictaker 8.png">
