dump screnshots for octoplay

--- a/octoplay.html
+++ b/octoplay.html
@@ -177,10 +177,171 @@
         <div class="gallery">
             <a data-fancybox="wip"
                data-caption="Case studies for this project are being worked on"
-               href="img/wip.png">
-                <img class="gallery1" src="img/wip.png"/>
+               href="img/wip2.png">
+                <img class="gallery1" src="img/wip2.png"/>
             </a>
         </div>
+
+        <div class="subtitle">Wireframes</div>
+        <div class="subtitle2">Language Game</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language game 1.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/wires language game 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language game 2.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/wires language game 2.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language game 3.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/wires language game 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language game 4.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/wires language game 4.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language game 5.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/wires language game 5.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language game 6.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/wires language game 6.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle2">Language Game New Level</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language settings 1.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/wires language settings 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language settings 2.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/wires language settings 2.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language settings 3.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/wires language settings 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language settings 4.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/wires language settings 4.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language settings 5.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/wires language settings 5.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/wires language settings 6.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/wires language settings 6.png"/>
+            </a>
+
+        </div>
+
+        <div class="subtitle">High Fidelity Mockups</div>
+        <div class="subtitle2">Language Game</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 1.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/language visd 1.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 2.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/language visd 2.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 3.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/language visd 3.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 8.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/language visd 8.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 9.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/language visd 9.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 4.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/language visd 4.png"/>
+            </a>
+
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 5.png">
+                <img class="gallery3 left_image with_border" src="img/octoplay/language visd 5.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 7.png">
+                <img class="gallery3 center_image with_border" src="img/octoplay/language visd 7.png"/>
+            </a>
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/language visd 6.png">
+                <img class="gallery3 right_image with_border" src="img/octoplay/language visd 6.png"/>
+            </a>
+
+        </div>
+
+
+        <div class="subtitle2">Memory Game</div>
+
+        <div class="gallery">
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/memory visd 1.png">
+                <img class="gallery2 left_image with_border" src="img/octoplay/memory visd 1.png"/>
+            </a>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/memory visd 2.png">
+                <img class="gallery2 right_image with_border" src="img/octoplay/memory visd 2.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/memory visd 3.png">
+                <img class="gallery2 left_image with_border" src="img/octoplay/memory visd 3.png"/>
+            </a>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/memory visd 4.png">
+                <img class="gallery2 right_image with_border" src="img/octoplay/memory visd 4.png"/>
+            </a>
+
+            <p class="gallery_separator"></p>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/memory visd 5.png">
+                <img class="gallery2 left_image with_border" src="img/octoplay/memory visd 5.png"/>
+            </a>
+
+            <a data-fancybox="showcase" class="needsBorder"
+               href="img/octoplay/memory visd 6.png">
+                <img class="gallery2 right_image with_border" src="img/octoplay/memory visd 6.png"/>
+            </a>
+
+
 
         <div id="disqus_thread"></div>
         <script>
